@@ -6,7 +6,7 @@ Description: `muscat` provides various methods and visualization tools
     aggregated “pseudobulk” data, as well as a flexible simulation platform 
     that mimics both single and multi-sample scRNA-seq data.
 Type: Package
-Version: 1.11.0
+Version: 1.11.1
 Depends: R (>= 4.2)
 Authors@R: c(
 	person("Helena L.", "Crowell", role=c("aut", "cre"), 
