@@ -1,3 +1,7 @@
+                        Changes in version 1.11.1
+
++ bug fix in pbHeatmap(): previously failed for results from 'mmDS()'
+
                         Changes in version 1.9.3
 
 + bug fix in pbDS(): drop samples w/o any detected features,
